--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
     "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@mui/x-tree-view": "^8.5.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^7.6.2"
   }
 }
